test/library/packages/UnitTest/PrimitivesError/GetByName_NoArgs.good
GetByName_NoArgs.chpl:18: error: illegal call of 'get test by name'. Expected a test function name.
